Changes
=======

0.03001 - 27 Oct 2010
  - Documented available libmemcached behaviours.
  - All libmemcached behaviours can now be set via new({ behaviour_... => ... }).
  - Assorted documentation additions and cleanups.
  - Added support for server weights.
  - Added support for Cache::Memcached::Fast style hashref server specification.
  - Added $keys parameter to stats()
  - Removed malloc, sizes, and self from default stats()
  - Require Memcached::libmemcached 0.4403

0.02011 - 26 Oct 2010
  - Many more libmemcached behaviours are now accessible.
  - walk_stats() now returns many more items in the totals hash
  - Fixed compression, thanks to Ask Bjørn Hansen, RT#46985
  - Require Memcached::libmemcached 0.4402

0.02010 - 07 Sep 2009
  - overhaul tests
  - require Memcached::libmemcached 0.3102

0.02009 - 03 Jul 2008
  - Correct get_multi() interaction with namespaces (Faylan Lim)

0.02008 - 03 Jul 2008
  - Offsets passed to decr() and incr() weren't properly handled.
    Pointed out by Taro Funaki

0.02007 - 27 May 2008
  - Arrayref arguments for get/set/add/et al have been properly
    implemented. Now you can use master keys. Yey!
  - fix incr()/decr() to respect namespace
  - Respect PERL_LIBMEMCACHED_OPTIMIZE
  - Require Memcached::libmemcached 0.2101 (now consistent hashing
    should work properly!)

0.02006 - 09 May 2008
  - Namespace support was ot properly working. fixed.

0.02005 - 18 Apr 2008
  - Explicitly require version of Test::More
  - Treat expiration time / time as a special case and don't proxy undef
    to memcached_* method calls.

0.02004 - 17 Apr 2008
  - Require Memcached::libmemcached 0.1902
  - Explcitly weaken reference to self in the callbacks

0.02003 - 13 Apr 2008
  - Add stats() method
  - Require Memcached::libmemcached 0.1901

0.02002 - 30 Mar 2008
  - Auto-generate accessors.
  - Add docs and tests for hashing_algorithm and distribution_method.
    They can also be specified in the constructor.